deck-builder/client-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deck-builder-service
  namespace: deck-builder
spec:
  type: ClusterIP  
  selector:
    app: deck-builder-client
  ports:
  - port: 4000
    targetPort: http
