deck-builder/server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deck-builder-server
  namespace: deck-builder
spec:
  type: ClusterIP  
  selector:
    app: deck-builder-server
  ports:
  - port: 3000
    targetPort: server
