deck-builder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deck-builder-ingress
  namespace: deck-builder
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: external-nginx
  rules:
  - host: gergodevops.deckbuilder.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deck-builder-service
            port: 
              number: 8080
  tls: 
  - hosts:
    - gergodevops.deckbuilder.com
    secretName: deck-builder-tls
